[v7.0] Collection validation does not check time ordering correctly for time-series v3 buckets

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-06-23
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On v7.0, when performing the collection validation check for the time ordering of a compressed time-series bucket, we do not properly track the previous timestamp seen. This can cause us to erroneously report the "Time-series bucket is v3 but has its measurements in-order on time" error.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: