SERVER-106050 Fix v3 time-series bucket ordering check in validation (#37086)

GitOrigin-RevId: 4d055780dafac775bb3180eacd63c21d10318cd1